@@ -18,19 +18,14 @@ package com.echothree.control.user.workflow.server.command;
 
 import com.echothree.control.user.workflow.common.form.CreateWorkflowTypeForm;
 import com.echothree.model.control.party.common.PartyTypes;
-import com.echothree.model.control.workflow.server.control.WorkflowControl;
+import com.echothree.model.control.workflow.server.logic.WorkflowTypeLogic;
 import com.echothree.model.data.user.common.pk.UserVisitPK;
-import com.echothree.model.data.workflow.server.entity.WorkflowType;
-import com.echothree.util.common.message.ExecutionErrors;
+import com.echothree.util.common.command.BaseResult;
 import com.echothree.util.common.validation.FieldDefinition;
 import com.echothree.util.common.validation.FieldType;
-import com.echothree.util.common.command.BaseResult;
 import com.echothree.util.server.control.BaseSimpleCommand;
 import com.echothree.util.server.control.CommandSecurityDefinition;
 import com.echothree.util.server.control.PartyTypeDefinition;
-import com.echothree.util.server.persistence.Session;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 
 public class CreateWorkflowTypeCommand
@@ -40,15 +35,15 @@ public class CreateWorkflowTypeCommand
     private final static List<FieldDefinition> FORM_FIELD_DEFINITIONS;
 
     static {
-        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(Collections.unmodifiableList(Arrays.asList(
+        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(List.of(
                 new PartyTypeDefinition(PartyTypes.UTILITY.name(), null)
-                )));
+        ));
 
-        FORM_FIELD_DEFINITIONS = Collections.unmodifiableList(Arrays.asList(
+        FORM_FIELD_DEFINITIONS = List.of(
                 new FieldDefinition("WorkflowTypeName", FieldType.ENTITY_NAME, true, null, null),
                 new FieldDefinition("IsDefault", FieldType.BOOLEAN, true, null, null),
                 new FieldDefinition("SortOrder", FieldType.SIGNED_INTEGER, true, null, null)
-                ));
+        );
     }
     
     /** Creates a new instance of CreateWorkflowTypeCommand */
@@ -58,19 +53,13 @@ public class CreateWorkflowTypeCommand
     
     @Override
     protected BaseResult execute() {
-        String workflowTypeName = form.getWorkflowTypeName();
-        var workflowControl = Session.getModelController(WorkflowControl.class);
-        WorkflowType workflowType = workflowControl.getWorkflowTypeByName(workflowTypeName);
-        
-        if(workflowType == null) {
-            var isDefault = Boolean.valueOf(form.getIsDefault());
-            var sortOrder = Integer.valueOf(form.getSortOrder());
-            
-            workflowControl.createWorkflowType(workflowTypeName, isDefault, sortOrder);
-        } else {
-            addExecutionError(ExecutionErrors.UnknownWorkflowTypeName.name(), workflowTypeName);
-        }
-        
+        var workflowTypeName = form.getWorkflowTypeName();
+        var isDefault = Boolean.valueOf(form.getIsDefault());
+        var sortOrder = Integer.valueOf(form.getSortOrder());
+
+        WorkflowTypeLogic.getInstance().createWorkflowType(this, workflowTypeName, isDefault, sortOrder, null,
+                null, getPartyPK());
+
         return null;
     }
     
